[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hacking-tutorial"
description = "Comprehensive tutorial series for ethical hacking and penetration testing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aman Dewangan", email = "amandewatnitrr@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Education",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "scapy>=2.4.5,<3.0",
    "requests>=2.28.0,<3.0",
    "beautifulsoup4>=4.11.1,<5.0",
    "cryptography>=39.0.0,<40.0",
    "geoip2>=4.6.0,<5.0",
    "urllib3>=1.26.14,<2.0",
    "paramiko>=2.11.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pip-audit",
]
sql-injection-lab = [
    "Flask>=2.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/amandewatnitrr/hacking-tutorial"
Repository = "https://github.com/amandewatnitrr/hacking-tutorial.git"
Issues = "https://github.com/amandewatnitrr/hacking-tutorial/issues"

[tool.setuptools.packages.find]
where = ["python-scripts"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88